--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^13.13.2",
     "@types/node-fetch": "^2.5.7",
     "concurrently": "^3.6.1",
-    "eslint": ">=4.18.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "4.0.0",
