--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.26.3",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
   "main": "dist/server.js",
@@ -29,7 +30,6 @@
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.9.0",
-    "tslint": "^6.1.1"
+    "eslint-plugin-react": "6.9.0"
   }
 }
